Fix css collapse

--- a/kasa/src/styles/Collapse.css
+++ b/kasa/src/styles/Collapse.css
@@ -19,7 +19,8 @@
 
 .collapse_content {
     text-align: justify;
-    width: 993px;
+    max-width: 993px;
+    width: 100%;
     background-color: #F6F6F6;
     margin-top: 0px;
     padding: 15px;
